--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   animated_read_more_text: ^0.0.6
   fluttertoast: ^8.1.1
   flutter_rating_bar: ^4.0.1
+  shimmer: ^3.0.0
 
   #FireBase
   firebase_core: ^2.24.2
